--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /* HERO */
 #hero {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
   max-height: 900px;
   background-image: url(/assets/images/female-cardinal-anita-cooke-photography.jpeg);
   background-size: cover;
@@ -104,7 +104,8 @@
 #button-menu {
   display: flex;
   justify-content: center;
-  background-color: var(--color-sage-gray);
+  background-color: var(--color-eggshell);
+  border: solid 1px;
 
 }
 
@@ -119,12 +120,12 @@
   border: 1px solid var(--color-black, #000);
   border-radius: 0;
   width: 30rem;
-  height: 6rem; /* consistent height */
+  height: 6rem;
   font-size: 3rem;
   font-family: 'Playfair Display SC', serif;
   background: transparent;
   cursor: pointer;
-  margin: 0; /* no space between buttons */
+  margin: 0;
   padding: 0;
   line-height: 1;
 }
