--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 90vh;
   max-height: 900px;
-  background-image: url(/assets/images/female-cardinal-anita-cooke-photography.jpeg);
+  background-image: url(/assets/images/female-cardinal-hero.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
