--- a/css/base.css
+++ b/css/base.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, button {
   justify-content: space-between;
   align-items: center;
   padding: 1rem 6rem;
-  border-bottom: 1px solid var(--color-sage-gray);
+  border-bottom: 1px solid;
   background-color: var(--color-white);
 }
 
