--- a/css/contact.css
+++ b/css/contact.css
@@ -15,10 +15,11 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transform: scaleX(-1);
 }
 
 .hero-right {
-  background-color: var(--color-eggshell);
+  background-color: var(--color-white);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,8 +44,8 @@ input[type="text"],
 textarea {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 1px solid var(--color-black);
+  border-radius: 0px;
   margin: 6px 0 16px;
   box-sizing: border-box;
   resize: vertical;
@@ -66,21 +67,4 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: var(--color-mauve-brown);
   color: var(--color-white);
-}
-
-/* PHOTOGRAPHER SECTION */
-#photographer {
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 5rem;
-border-top: 1px solid;
-}
-
-.anita-cooke img {
-  width: 100%;
-  max-width: 300px;
-  height: auto;
-  border: 1px solid var(--color-sage-gray);
-  object-fit: cover;
 }
