--- a/css/index.css
+++ b/css/index.css
@@ -228,7 +228,7 @@
 }
 
 /* ======================= */
-/*        RESPONSIVE       */
+/*     MEDIA RESPONSIVE    */
 /* ======================= */
 
 @media (max-width: 1024px) {
@@ -259,7 +259,7 @@
   }
 
   .button-menu-container button {
-    width: 100%;
+    width: 12rem;
     font-size: 2rem;
     height: 4rem;
   }
@@ -296,7 +296,7 @@
   .button-menu-container button {
     font-size: 1.5rem;
     height: 3.5rem;
-    width: 8rem;
+    width: 10rem;
   }
 }
 
