--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,12 @@
 /* HERO */
 #hero {
   width: 100%;
-  height: 90vh;
+  height: 80vh;
   background-image: url(/assets/images/female-cardinal-hero.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
   justify-content: flex-end;
   border-bottom: 1px solid var(--color-black);
 }
@@ -228,19 +227,27 @@
 }
 
 /* ======================= */
-/*     MEDIA RESPONSIVE    */
+/*     MEDIA QUERIES       */
 /* ======================= */
 
 @media (max-width: 1024px) {
   /* Reduce hero font size for tablets */
+#hero {
+    height: 40vh;
+    justify-content: center;
+  }
+
+  .hero-title {
+    padding: 20px;
+  }
+
+
   .hero-title h1 {
-    font-size: 3rem;
-    padding-right: 2rem;
+    font-size: 1rem;
   }
 
   #about-me {
-    flex-direction: column;
-    padding: 4rem 2rem;
+    flex-direction: row;
     gap: 2rem;
   }
 
@@ -250,12 +257,6 @@
 
   .about-anita-cooke h1 {
     font-size: 2.5rem;
-    text-align: center;
-  }
-
-  .about-anita-cooke {
-    align-items: center;
-    text-align: center;
   }
 
   .button-menu-container button {
@@ -266,19 +267,37 @@
 }
 
 @media (max-width: 768px) {
-
+  #hero {
+    height: 40vh;
+    justify-content: center;
+  }
 
   .hero-title {
-    padding: 2rem 1rem;
-    text-align: center;
+    padding: 20px;
   }
 
   .hero-title h1 {
-    font-size: 2.2rem;
+    padding: 0;
+    margin: 0;
+    font-size: 10px;
   }
 
   #about-me {
+    flex-direction: column;
     padding: 3rem 1.5rem;
+  }
+    .about-anita-cooke h1 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+  .about-anita-cooke {
+    align-items: center;
+    text-align: center;
+  }
+
+  .photo-of-anita-cooke img {
+    max-width: 30%;
   }
 
   .about-anita-cooke h1 {
@@ -301,8 +320,20 @@
 }
 
 @media (max-width: 480px) {
+
+  #hero {
+    height: 50vh;
+    justify-content: center;
+  }
+
   .hero-title h1 {
-    font-size: 1.8rem;
+    padding: 0;
+    margin: 0;
+    font-size: 10px;
+  }
+
+  .photo-of-anita-cooke img {
+    max-width: 60%;
   }
 
   #about-me p {
