--- a/css/contact.css
+++ b/css/contact.css
@@ -20,7 +20,7 @@
 }
 
 .hero-right {
-  background-color: var(--color-white);
+  background-color: var(--color-eggshell);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,6 +41,7 @@ form h1 {
   font-size: 3rem;
   margin: 0;
   line-height: 1.2;
+  padding-bottom: 5px;
 }
 
 input[type="text"],
