--- a/css/contact.css
+++ b/css/contact.css
@@ -33,8 +33,12 @@
   box-sizing: border-box;
 }
 
+form {
+  padding: 45px;
+}
+
 form p {
-  padding-bottom: 40px;
+  padding-bottom: 10px;
 }
 
 form h1 {
@@ -44,7 +48,7 @@ form h1 {
   padding-bottom: 5px;
 }
 
-input[type="text"],
+input[type="text"], input[type="email"],
 textarea {
   width: 100%;
   padding: 12px;
@@ -77,7 +81,6 @@ input[type="submit"]:hover {
 /*       MEDIA QUERIES   */
 /* ===================== */
 
-/* Mobile and tablet responsiveness */
 @media (max-width: 768px) {
   #contact-hero {
     flex-direction: column;
@@ -99,7 +102,7 @@ input[type="submit"]:hover {
     font-size: 2rem;
   }
 
-  input[type="text"],
+  input[type="text"],  input[type="email"],
   textarea {
     padding: 10px;
   }
@@ -110,7 +113,6 @@ input[type="submit"]:hover {
   }
 }
 
-/* Small screen, mobile portrait */
 @media (max-width: 480px) {
   form {
     padding: 1rem;
