--- a/css/gallery.css
+++ b/css/gallery.css
@@ -30,7 +30,7 @@
 
 .gallery-container img {
   width: 100%;
-  height: auto;
+  height: 300px;
   border: 1px solid var(--color-sage-gray);
   object-fit: cover;
   transition: transform 0.3s ease;
