--- a/css/base.css
+++ b/css/base.css
@@ -153,12 +153,16 @@ button:hover {
   text-decoration: underline;
 }
 
+.footer-credit {
+  width: 100%;
+  text-align: center;
+  font-size: 0.9rem;
+  color: var(--color-black);
+}
 
 /* ========================= */
 /*      MEDIA QUERIES         */
 /* ========================= */
-
-
 
 
 @media (max-width: 768px) {
