--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
   padding-bottom: 5rem;
 }
 
-.hero-title #anita-cooke-title {
+.hero-title #anita-title, #anita-title-2 {
   font-family: 'Playfair Display SC', serif;
   font-size: 1.5rem;
 }
@@ -63,26 +63,26 @@
   width: 300px;
 }
 
-.photo-of-anita-cooke img {
+.photo-of-anita img {
   max-width: 400px;
   width: 100%;
   border: var(--color-black);
 }
 
-.about-anita-cooke {
+.about-anita {
   max-width: 600px;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
 }
 
-.about-anita-cooke h1 {
+.about-anita h1 {
   font-size: 4rem;
   margin: 0;
   line-height: 1.2;
 }
 
-.about-anita-cooke button {
+.about-anita button {
   font-size: 1rem;
   padding: 0.75rem 1.5rem;
   background-color: var(--color-sage-gray);
@@ -94,19 +94,19 @@
   transition: background-color 0.3s;
 }
 
-.about-anita-cooke button:hover {
+.about-anita button:hover {
   background-color: var(--color-mauve-brown);
   color: var(--color-white);
 }
 
-.photo-of-anita-cooke {
+.photo-of-anita {
   height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.photo-of-anita-cooke img {
+.photo-of-anita img {
   max-height: 100%;
   width: auto;
   height: auto;
@@ -265,11 +265,11 @@
     gap: 2rem;
   }
 
-  .photo-of-anita-cooke {
+  .photo-of-anita {
     height: auto;
   }
 
-  .about-anita-cooke h1 {
+  .about-anita h1 {
     font-size: 2.5rem;
   }
 
@@ -300,21 +300,21 @@
     flex-direction: column;
     padding: 3rem 1.5rem;
   }
-    .about-anita-cooke h1 {
+    .about-anita h1 {
     font-size: 2.5rem;
     text-align: center;
   }
 
-  .about-anita-cooke {
+  .about-anita {
     align-items: center;
     text-align: center;
   }
 
-  .photo-of-anita-cooke img {
+  .photo-of-anita img {
     max-width: 30%;
   }
 
-  .about-anita-cooke h1 {
+  .about-anita h1 {
     font-size: 2rem;
   }
 
@@ -348,7 +348,7 @@
     font-size: 10px;
   }
 
-  .photo-of-anita-cooke img {
+  .photo-of-anita img {
     max-width: 60%;
   }
 
@@ -356,7 +356,7 @@
     width: 100%;
   }
 
-  .about-anita-cooke {
+  .about-anita {
     padding: 0;
   }
 
