--- a/css/index.css
+++ b/css/index.css
@@ -122,6 +122,8 @@
   background-color: var(--color-eggshell);
   color: var(--color-black);
   padding: 1rem 0;
+    border-bottom: solid 1px;
+
 }
 
 .scroll-left {
@@ -160,8 +162,7 @@
   display: flex;
   justify-content: center;
   background-color: var(--color-eggshell);
-  border: solid 1px;
-
+  border-bottom: solid 1px;
 }
 
 .button-menu-container {
@@ -347,6 +348,7 @@
     margin: 0;
     font-size: 10px;
   }
+
 
   .photo-of-anita img {
     max-width: 60%;
