--- a/css/gallery.css
+++ b/css/gallery.css
@@ -30,8 +30,9 @@
 .gallery-container img {
   width: 100%;
   height: 300px;
-  border: 1px solid var(--color-sage-gray);
-  object-fit: cover;
+  /* border: 1px solid var(--color-sage-gray); */
+  object-fit: scale-down;
+  /* object-fit: cover; */
   transition: transform 0.3s ease;
 }
 
